fix: use semantic form tag + type reset on button clear

--- a/examples/module1/lesson1/validate-it/index.html
+++ b/examples/module1/lesson1/validate-it/index.html
@@ -8,7 +8,7 @@
   </head>
   <body class="bg-gray-100 p-4">
     <div class="max-w-4xl mx-auto">
-      <div class="flex flex-col">
+      <form onsubmit="event.preventDefault()" class="flex flex-col">
         <input
           class="rounded-md p-4 shadow-lg"
           type="number"
@@ -23,6 +23,7 @@
             Validate It!
           </button>
           <button
+            type="reset"
             class="rounded-md text-lg bg-red-200 hover:bg-red-800 hover:text-white p-4 mt-4"
             id="button-clear"
           >
@@ -30,7 +31,7 @@
           </button>
         </div>
         <div class="text-lg mt-4" id="result"></div>
-      </div>
+      </form>
     </div>
     <script type="module" src="./index.ts"></script>
   </body>
